# dsmr

./: .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yaml
dsmr/: client.py  server.py  streamer.py  worker.py
dsmr_client/: buffer.py  consumer.py  dto.py  exceptions.py  influxdb.py  logging.conf  main.py  obis.py  settings.py  streamer.py  telegram.py
dsmr_client/test_utils/: mock_server.py
dsmr_server/: README.md  docker-compose.yml  ser2net.yaml
example/: mock_server.py
grafana/dashboards/: default.yml
grafana/dashboards/dsmr/: electricty_dashboard.json
grafana/datasources/: datasource.yml
influxdb/scripts/: setup-v2.sh
influxdb/tasks/: downsample-10m.flux  downsample.flux
ser2net/: README.md  ser2net.yaml
server/: docker-compose.yml  ser2net.yaml
