[tool.poetry]
name = "dsmr_client"
version = "0.1.0"
description = ""
authors = ["Isaac Williams <isaac.andrew.williams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dsmr-parser = "^1.3.0"
pydantic-settings = "^2.0.3"
influxdb-client = {extras = ["async"], version = "^1.37.0"}


[tool.poetry.group.dev.dependencies]
types-influxdb-client = "^1.37.0.0"
mypy = "^1.5.1"
black = "^23.7.0"
isort = "^5.12.0"


[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
