[tool.poetry]
name = "dsmr_client"
version = "0.1.0"
description = ""
authors = ["Isaac Williams <isaac.andrew.williams@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
influxdb-client = {extras = ["async"], version = "^1.47.0"}
pydantic = "^2.10.1"
pydantic-settings = "^2.0.3"
tenacity = "^8.2.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ruff = "^0.8.0"
types-influxdb-client = "^1.37.0.0"


[tool.mypy]
plugins = [
  "pydantic.mypy"
]


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
