[project]
name = "dsmr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "influxdb-client[async]>=1.48.0",
    "pydantic-settings>=2.6.1",
    "tenacity>=9.0.0",
]


[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.2",
    "types-influxdb-client>=1.45.0.20240915",
]


[tool.mypy]
plugins = [
  "pydantic.mypy"
]


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
